Added post list and post creation links and pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,5 +9,7 @@
     </h1>
     <p><a href="/users">Users Page</a></p>
     <p><a href="/users/new">Create a new User</a></p>
+    <p><a href="/posts">Post List</a></p>
+    <p><a href="/posts/new">Create a post</a></p>
   </body>
 </html>
