--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -10,9 +10,57 @@
 </head>
 
 <body>
-  <form action="/users" method="post">
-    
+<form action="/users" method="post">
 
+        <label>
+
+            First Name 
+
+            <input type="text" name="firstName" value="<%= locals.firstName %>">
+
+        </label>
+
+        <br>
+
+        <label>
+
+            Last Name 
+
+            <input type="text" name="lastName" value="<%= locals.lastName %>">
+
+        </label>
+
+        <br>
+
+        <label>
+
+            Male
+
+            <input type="radio" name="gender" value="Male">
+
+        </label>
+
+        <label>
+
+            Female
+
+            <input type="radio" name="gender" value="Female">
+
+        </label>
+
+        <br>
+
+        <label>
+
+            Age
+
+            <input type="number" name="age">
+
+        </label>
+
+        <br>
+
+        <button type="submit">Submit</button>
 
   </form>
 </body>
