--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -11,27 +11,31 @@
 
 <body>
 <form action="/users" method="post">
+  <fieldset>
+    <legend>Name</legend>
+      <label>
 
-        <label>
+        First Name 
 
-            First Name 
+        <input type="text" name="firstName" value="<%= locals.firstName %>">
 
-            <input type="text" name="firstName" value="<%= locals.firstName %>">
+      </label>
+
+      <br>
+
+      <label>
+
+        ast Name 
+
+        <input type="text" name="lastName" value="<%= locals.lastName %>">
 
         </label>
+  </fieldset>
 
         <br>
 
-        <label>
-
-            Last Name 
-
-            <input type="text" name="lastName" value="<%= locals.lastName %>">
-
-        </label>
-
-        <br>
-
+  <fieldset>
+    <legend>Gender</legend>
         <label>
 
             Male
@@ -47,6 +51,7 @@
             <input type="radio" name="gender" value="Female">
 
         </label>
+    </fieldset>
 
         <br>
 
